client/app/styles/_dashboard.scss
#content-wrapper {
    padding-left: 0;
    margin-left: 0;
    width: 100%;
    height: auto;
}

@media only screen and (min-width: 561px) {
    #page-wrapper.open {
        padding-left: 250px;
    }
}

@media only screen and (max-width: 560px) {
    #page-wrapper.open {
        padding-left: 70px;
    }
}

#page-wrapper.open #sidebar-wrapper {
    left: 150px;
    overflow-y: auto;
}

/**
 * Hamburg Menu
 * When the class of 'hamburg' is applied to the body tag of the document,
 * the sidebar changes it's style to attempt to mimic a menu on a phone app,
 * where the content is overlaying the content, rather than push it.
 */
@media only screen and (max-width: 560px) {
    body.hamburg #page-wrapper {
        padding-left: 0;
    }
    body.hamburg #page-wrapper:not(.open) #sidebar-wrapper {
        position: absolute;
        left: -100px;
    }
    body.hamburg #page-wrapper:not(.open) ul.sidebar .sidebar-title.separator {
        display: none;
    }
    body.hamburg #page-wrapper.open #sidebar-wrapper {
        position: fixed;
    }
    body.hamburg #page-wrapper.open #sidebar-wrapper ul.sidebar li.sidebar-main {
        margin-left: 0;
    }
    body.hamburg #sidebar-wrapper ul.sidebar li.sidebar-main,
    body.hamburg .row.header .meta {
        margin-left: 70px;
    }
    body.hamburg #sidebar-wrapper ul.sidebar li.sidebar-main,
    body.hamburg #page-wrapper.open #sidebar-wrapper ul.sidebar li.sidebar-main {
        transition: margin-left 0.4s ease 0s;
    }
}

/**
 * Header
 */
.row.header {

    & > div:last-child {
        padding-right: 0;
    }
    & div {
        margin-bottom: 0;
    }
    .meta {
        padding-left: $grid-gutter-width / 2;
        margin-bottom: 0;
        .page {
            font-size: $font-size-h2;
            padding-top: 11px;
        }

        .breadcrumb-links {
            font-size: $font-size-sub;
        }

        div {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    .login a {
        padding: 18px;
        display: block;
    }

    .user {
        min-width: 130px;
        & > .item {
            padding: 0 20px 0 0;
            height: 68px;
            float: right;
            display: inline-block;
            text-align: center;
            vertical-align: middle;
            &.user-menu {
                padding-right: 0;
            }
            .dropdown-toggle {
                height: inherit;
                line-height: 68px;
                cursor: pointer;
                .fa-caret-down {
                    display: none;
                }
            }
            .username {
                position: relative;
                top: -4px;
            }
            .dropdown-menu {
                right: 100%;
                margin-right: -41px;
                .link {
                    .fa {
                        width: 30px;
                        text-align: center;
                    }
                }
            }
            i {
                font-size: $font-size-h3;
                line-height: 68px;
                &.fa-user {
                    font-size: $font-size-h1;
                }
            }

        }
        .organization-selector {
            float: right;
            margin: 23px 20px 0 0;
        }
    }
}

.row.header .user > .item ul.dropdown-menu {
    border-radius: 2px;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05);
}

.row.header .user > .item ul.dropdown-menu .dropdown-header {
    text-align: center;
}

.row.header .user > .item ul.dropdown-menu li.link {
    text-align: left;
    &:hover {
        color: $grey-medium-dark;
    }
}

.row.header .user > .item ul.dropdown-menu li.link a {
    padding-left: 7px;
    padding-right: 7px;
}

.row.header .user > .item ul.dropdown-menu:before {
    position: absolute;
    top: -7px;
    right: 23px;
    display: inline-block;
    border-right: 7px solid transparent;
    border-bottom: 7px solid rgba(0, 0, 0, 0.2);
    border-left: 7px solid transparent;
    content: '';
}

.row.header .user > .item ul.dropdown-menu:after {
    position: absolute;
    top: -6px;
    right: 24px;
    display: inline-block;
    border-right: 6px solid transparent;
    border-bottom: 6px solid #ffffff;
    border-left: 6px solid transparent;
    content: '';
}

.loading {
    width: 40px;
    height: 40px;
    position: relative;
    margin: 100px auto;
}
.compact .loading {
    margin: 20px auto;
}

.double-bounce1,
.double-bounce2 {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: #333;
    opacity: 0.6;
    position: absolute;
    top: 0;
    left: 0;
    -webkit-animation: bounce 2s infinite ease-in-out;
    animation: bounce 2s infinite ease-in-out;
}

.double-bounce2 {
    -webkit-animation-delay: -1s;
    animation-delay: -1s;
}

@-webkit-keyframes bounce {
    0%,
    100% {
        -webkit-transform: scale(0);
    }
    50% {
        -webkit-transform: scale(1);
    }
}

@keyframes bounce {
    0%,
    100% {
        transform: scale(0);
        -webkit-transform: scale(0);
    }
    50% {
        transform: scale(1);
        -webkit-transform: scale(1);
    }
}

/* Fonts */
//.row {
//    margin-left: 0 !important;
//    margin-right: 0 !important;
//}

.row > div {
    margin-bottom: 15px;
}

.alerts-container .alert:last-child {
    margin-bottom: 0;
}

#page-wrapper {
    padding-left: 70px;
    height: 100%;
}

#sidebar-wrapper {
    margin-left: -150px;
    left: -30px;
    width: 250px;
    position: fixed;
    height: 100%;
    z-index: 999;
}

#page-wrapper,
#sidebar-wrapper {
    transition: all .4s ease 0s;
}

.green {
    background: #23ae89 !important;
}

.blue {
    background: #2361ae !important;
}

.orange {
    background: #d3a938 !important;
}

.red {
    background: #ae2323 !important;
}

.form-group .help-block.form-group-inline-message {
    padding-top: 5px;
}

div.input-mask {
    padding-top: 7px;
}

/* #592727 RED */
/* #2f5927 GREEN */
/* #30426a BLUE (default)*/
/* Sidebar background color */
/* Sidebar header and footer color */
/* Sidebar title text colour */
/* Sidebar menu item hover color */
/**
 * Sidebar
 */
#sidebar-wrapper {
    background-color: $grey-light;
    .sidebar-header {
        border-bottom: solid 1px $grey-medium-light;
        margin: 0;

        .logo {
            margin: 15px;
            width: 185px;
            float: left;
            background-position: left center;
        }

        .sidebar-toggle {
            display: block;
            text-align: center;
            position: absolute;
            top: 0;
            right: 0;
            line-height: 1.4;
            font-size: $font-size-h1;
            width: $sidebar-toggle-width;
        }
    }
}

*:not(.open) #sidebar-wrapper .sidebar-header {
    border-bottom-color: transparent;
}

ul.sidebar .sidebar-main a,
.sidebar-footer,
ul.sidebar .sidebar-list a:hover,
#page-wrapper:not(.open) ul.sidebar .sidebar-title.separator {
    /* Sidebar header and footer color */
    background-color: transparent;
}

ul.sidebar {
    /*    position: absolute;*/
    top: 0;
    bottom: 0;
    padding: 0;
    margin: 0;
    list-style: none;
    text-indent: 20px;
    overflow-x: hidden;
    overflow-y: auto;
}

ul.sidebar li a {
    color: #fff;
    display: block;
    float: left;
    text-decoration: none;
    /*width: 250px;*/
    width: 233px;
}

ul.sidebar .sidebar-main {
    height: 65px;
}

ul.sidebar .sidebar-main a {
    font-size: $font-size-h2;
    line-height: 40px;
}

ul.sidebar .sidebar-main a:hover {
    cursor: pointer;
}

ul.sidebar .sidebar-main .menu-icon {
    float: right;
    font-size: $font-size-h2;
    padding: 0 10px 0 0;
    margin: 0;
    line-height: 1.4;
}

ul.sidebar .sidebar-title {
    height: 35px;
    line-height: 40px;
    transition: all .6s ease 0s;
}

ul.sidebar .sidebar-list {
    height: 40px;
}

ul.sidebar .sidebar-list a {
    text-indent: 25px;
    font-size: 15px;
    color: #b2bfdc;
    line-height: 40px;
}

ul.sidebar .sidebar-list a:hover {
    color: #fff;
    border-left: 3px solid #e99d1a;
    text-indent: 22px;
}

ul.sidebar .sidebar-list a:hover .menu-icon {
    text-indent: 25px;
}

ul.sidebar .sidebar-list .menu-icon {
    float: right;
    padding-right: 29px;
    line-height: 40px;
    width: 70px;
}

#page-wrapper:not(.open) ul.sidebar {
    bottom: 0;
}

#page-wrapper:not(.open) ul.sidebar .sidebar-title {
    display: none;
    height: 0px;
    text-indent: -100px;
}

#page-wrapper:not(.open) ul.sidebar .sidebar-title.separator {
    display: block;
    height: 2px;
    margin: 13px 0;
}

#page-wrapper:not(.open) ul.sidebar .sidebar-list a:hover span {
    border-left: 3px solid #e99d1a;
    text-indent: 22px;
}

#page-wrapper:not(.open) .sidebar-footer {
    display: none;
}

.sidebar-footer {
    position: absolute;
    height: 40px;
    bottom: 0;
    width: 100%;
    padding: 0;
    margin: 0;
    transition: all .6s ease 0s;
    text-align: center;
}

.sidebar-footer div a {
    color: #b2bfdc;
    font-size: 12px;
    line-height: 43px;
}

.sidebar-footer div a:hover {
    color: #ffffff;
    text-decoration: none;
}

.indicator-box {
    padding: 15px;
    text-align: center;
    strong {
        font-size: 40px;
        font-weight: normal;
    }
    color: $white;
    background: $green;
}

.indicators-table {
    width: 100%;
    tr {
        td {
            @extend .indicator-box;
            width: 200px;
            color: $white;
            border-left: 15px solid $white;
            &:first-child {
                border: none;
            }
        }
        &.indicator-header td {
            padding-bottom: 5px;
        }
        &.indicator-values td {
            padding-top: 5px;
        }
    }
}

.section {
    margin: 20px 0;
}

.task-status-completed {
    color: $gray;
}
.task-status-current {
    color: $green;
    &.delayed {
        color: $red;
    }
}
.task-status-waiting {
    color: #bbb;
}

/* Task Page */
.myTaskTable {
    table {
        th:first-child {
            width: 15%;
        }
        th:nth-child(2) {
            width: 35%;
        }
        th:nth-child(3) {
            width: 25%;
        }
        th:nth-child(4) {
            width: 25%;
        }
    }
}

